# pyear

./: AGENTS.md  README.md  blink_segment.md  debug_epoch_blink_overlay.py  dev_find_issue_segmet_blink_properties.py  list_eye_features.md  pyproject.toml  requirements.txt  segment_features.py
docs/: FEATURES.md  conf.py  index.rst  tutorial.ipynb
docs/source/: modules.rst  pyear.blink_events.classification.rst  pyear.blink_events.event_features.rst  pyear.blink_events.rst  pyear.ear_metrics.features.rst  pyear.ear_metrics.rst  pyear.energy_complexity.rst  pyear.frequency_domain.rst  pyear.kinematics.rst  pyear.matlab_fork.rst  pyear.morphology.rst  pyear.open_eye.features.rst  pyear.rst  (+5 more)
ground_truth/: epoch_blink_overlay.py
pyear/: __init__.py  pipeline.py
tutorial/: blink_features_epochs.ipynb  blink_features_every_30s.ipynb  frequency_features.ipynb  plot_blinks_report.py  refine_blinks.ipynb  segment_aggregate_analysis.ipynb
unitest/: conftest.py  ear_eog_blink_count_epoch.csv  refine_eog_script.py.py  run_all_test.py  test_blink_classification_features.py  test_blink_count.py  test_blink_count_epochs.py  test_blink_interval_distribution.py  test_blink_rate.py  test_ear_features.py  test_eeg_eog_refinement.py  test_energy_complexity_features.py  test_epoch_blink_overlay.py  test_frequency_domain_features.py  test_inter_blink_interval.py  test_kinematic_features.py  test_open_eye_features.py  test_prepare_refined_segments.py  test_raw_blink_count.py  test_single_blink_features.py  test_slice_helper.py  test_slice_into_mini_raws.py  test_waveform_features.py
(+85 files in other folders)
