[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyear"
version = "0.1.0"
description = "Toolkit for blink-based fatigue analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "pyear" }]
dependencies = [
    "mne",
    "pandas",
    "tqdm",
    "PyWavelets",
]

[tool.setuptools.packages.find]
include = ["pyear*"]
